fix for forum reply post not showing ckeditor

--- a/core/plugins/groups/forum/assets/css/forum.css
+++ b/core/plugins/groups/forum/assets/css/forum.css
@@ -210,7 +210,7 @@
 	.comment-add label {
 		display: block;
 	}
-	.comment-add label span {
+	.comment-add label span.label-text {
 		display: none;
 	}
 	.comment-add .cancelreply {
